<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="website" translatable="false">https://transportr.grobox.de/?utm_source=app</string>
    <string name="bugtracker" translatable="false">https://github.com/grote/Transportr/issues</string>
    <string name="google_play_short_desc" tools:keep="@string/google_play_short_desc">The public transport companion that respects your privacy and your freedom.</string>
    <string name="google_play_full_desc" tools:keep="@string/google_play_full_desc">Transportr is a non-profit app developed by people around the world to make
using public transport as easy as possible wherever you are.

Currently, it works best in Europe, but also supports many places world-wide. If
you live in an unsupported area, consider adding it to Transportr.
Instructions are available on the homepage.

Transportr finds directions from your home, your current position or a given station to
wherever you want to go. You can also save entire trips as favorites and find
next trips with one swipe. Of course, you can also show your trip on the map
and follow your progress via GPS.

You can also discover nearby stations and show upcoming departures including the delays (if
there are any).</string>
    <string name="onboarding_drawer_title">Discover More Features</string>
    <string name="onboarding_drawer_text">Tap this icon to open the navigation drawer to access more features of this app.</string>
    <string name="drawer_changelog">Changelog</string>
    <string name="drawer_about">About</string>
    <string name="drawer_settings">Settings</string>
    <string name="action_fav_trip">Mark Trip as Favourite</string>
    <string name="action_unfav_trip">Unmark Trip as Favourite</string>
    <string name="action_switch_locations">Swap From and To</string>
    <string name="action_time_type">Time is</string>
    <string name="trip_dep">Departure</string>
    <string name="trip_arr">Arrival</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_navigation_expand">Show Via</string>
    <string name="action_choose_products">Means of Transport</string>
    <string name="action_location_map">Show Stations on Map</string>
    <string name="action_use_gps">Turn on GPS</string>
    <string name="action_share">Share</string>
    <string name="action_trip_calendar">Add to Calendar</string>
    <string name="action_trip_delete">Delete Trip</string>
    <string name="action_show_on_external_map">Show on External Map</string>
    <string name="action_copy">Copy</string>
    <string name="action_show_on_map">Show on Map</string>
    <string name="action_show_all">Show All</string>
    <string name="drawer_directions">Directions</string>
    <string name="tab_fav_trips">Favourite Trips</string>
    <string name="drawer_departures">Departures</string>
    <string name="drawer_recent_trips">Recent Trips</string>
    <string name="tab_libraries">Libraries</string>
    <string name="tab_devs">Developers</string>
    <string name="tab_about">About</string>
    <string name="about_top">© 2013 &#8211; 2017 Torsten Grote\nFree Software License: GPLv3</string>
    <string name="about">
<![CDATA[
<p>Transportr is a public transport companion that respects your privacy and your freedom. It is a non-profit app developed by people around the world to make using public transport as easy as possible wherever you are. This app is Free Software, so you can freely use, study, share and improve it.</p>
<p>There is no guarantee for the correctness of the data. Please only use this app at your own risk.</p>
]]>
</string>
    <string name="about_bottom">
<![CDATA[
<p><b>Contributions</b> are encouraged and appreciated. If you would like to contribute please go to <a href="%1$s">the Transportr homepage</a> for more information.</p>
<p>If you find any issues with this app, please report them at <a href="%2$s">the issue tracker</a>.</p>
<p><b>Donations</b> options are listed on <a href="%3$s">the Transportr website</a>.</p>
]]>
</string>
    <string name="visit_website">Visit Website</string>
    <string name="trip_removed">Removed Trip</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="via">Via</string>
    <string name="search">Search</string>
    <string name="from_here">From Here</string>
    <string name="to_here">To Here</string>
    <string name="min"> min</string>
    <string name="walk">Walk</string>
    <string name="position">Platform</string>
    <string name="alpha">alpha</string>
    <string name="beta">beta</string>
    <string name="network">Network</string>
    <string name="pick_network_activity">Choose Area</string>
    <string name="pick_network_first_run">Welcome to Transportr!\n\nPlease select the transportation network from your area in order to continue. You can change this at any time.</string>
    <plurals name="clear_recent_trips">
        <item quantity="one">Are you sure that you want to delete %1$d trip from your recent trips? The usage count will be lost.</item>
        <item quantity="other">Are you sure that you want to delete %1$d trips from your recent trips? The usage count will be lost.</item>
    </plurals>
    <string name="trip_searching">Searching for connections&#8230;</string>
    <string name="stations_searching_position">Searching for current position&#8230;</string>
    <string name="drawer_nearby_stations">Nearby Stations</string>
    <string name="find_nearby_stations">Find Nearby Stations</string>
    <string name="find_departures">Find Departures</string>
    <string name="departure_station">Departure Station</string>
    <string name="share_trip_via">Share Trip Via&#8230;</string>
    <string name="undo">Undo</string>
    <string name="fav_trips_empty">Your recent trips will appear here once you start searching for directions.\n\n\nYou will be able to sort them by most frequently or most recently used.</string>
    <string name="more">More</string>
    <string name="no_favourites">No favourite trips.\n\nAdd one on the \"Recent Trips\" page.</string>
    <string name="removing_from_favourites">A trip you selected is marked as favourite trip. It will be removed there too.</string>
    <string name="create_quickhome_shortcut">Create a shortcut in your launcher that gets you home</string>
    <string name="change_time">Change Time</string>
    <string name="now">Now</string>
	<string name="now_small">now</string>
    <string name="current_time_set">Time was set to current.</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="current_date_set">Date was set to current.</string>
    <string name="added_1h">1 hour was added.</string>
    <string name="in_x_minutes">in %dmin</string>
    <string name="x_minutes_ago">%dmin ago</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="pref_transport_network">Transport Network</string>
    <string name="pref_hide_departure_time">Hide departure time</string>
    <string name="pref_hide_departure_time_summary">Only show arrival time when displaying intermediate stops</string>
    <string name="pref_exit_app_on_back_press">Close app with back button</string>
    <string name="pref_exit_app_on_back_press_summary">Always close the app when pressing back button in start screen</string>
    <string name="pref_home">Home Location</string>
    <string name="pref_display">Display</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_light">Light</string>
    <string name="pref_theme_dark">Dark</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_directions_routing">Directions and Trip Routing</string>
    <string name="pref_optimize">Optimize for</string>
    <string name="pref_optimize_least_duration">Least Duration</string>
    <string name="pref_optimize_least_changes">Least Changes</string>
    <string name="pref_optimize_least_walking">Least Walking</string>
    <string name="pref_walk_speed">Walk Speed</string>
    <string name="pref_walk_speed_slow">Slow</string>
    <string name="pref_walk_speed_normal">Normal</string>
    <string name="pref_walk_speed_fast">Fast</string>
    <string name="pref_quickhome">\"Get Me Home\"-shortcut</string>
    <string name="warning_departure_gap">Found too few departures. There might be more hidden. Search for exact time to be sure none is missing.</string>
    <string name="warning_permission_granted_action">Could not repeat last action automatically</string>
    <string name="error_no_internet">No sufficient internet connection available</string>
    <string name="error_invalid_from">Invalid Start Location (From)</string>
    <string name="error_invalid_to">Invalid Destination (To)</string>
    <string name="error_no_trips_found">No directions found</string>
    <string name="error_no_location_provider">Cannot locate your position. Please turn on GPS!</string>
    <string name="error_no_departures_found">No departures found</string>
    <string name="error_no_stations_found">No stations found</string>
    <string name="error_no_proper_station">The provided location is no proper station</string>
    <string name="error_only_autocomplete_station">Please select a station from the autocompletion list!</string>
    <string name="error_no_station_location">Cannot find the location of the(se) station(s)</string>
    <string name="error_no_trips_capability">This transportation network does not support querying for directions.</string>
    <string name="error_no_departures_capability">The current transportation network does not support finding departures.</string>
    <string name="error_no_nearby_locations_capability">The current transportation network does not support finding nearby stations.</string>
    <string name="error_trip_refresh_failed">Could not refresh data for current trip.</string>
    <string name="meter">m</string>
    <plurals name="stops">
        <item quantity="one">%d Stop</item>
        <item quantity="other">%d Stops</item>
    </plurals>
    <string name="system_default">System Default</string>
    <string name="times_include_delays">(Attention: Times include reported delays)</string>
    <string name="home">Home</string>
    <string name="home_dialog_title">Set Home Location</string>
    <string name="work">Work</string>
    <string name="work_hint">Set Work Location</string>
    <string name="work_dialog_title">Set Work Location</string>
    <string name="tap_to_set">Tap to set</string>
    <string name="location">Location</string>
    <string name="location_home">Click to set Home Location</string>
    <string name="location_gps">Use Current Position</string>
    <string name="location_map">Get Location from Map</string>
    <string name="position_not_yet_known">Position not yet known</string>
    <string name="position_no_gps">GPS is turned off. Position will be very imprecise.</string>
    <string name="select_products">Select Means of Transport</string>
    <string name="product_high_speed_train">High-Speed Train</string>
    <string name="product_regional_train">Regional Train</string>
    <string name="product_suburban_train">Suburban Train</string>
    <string name="product_subway">Subway</string>
    <string name="product_tram">Tram</string>
    <string name="product_bus">Bus</string>
    <string name="product_ferry">Ferry</string>
    <string name="product_cablecar">Cablecar</string>
    <string name="product_on_demand">On Demand</string>
    <string name="action_fav_trips_sort">Sort List</string>
    <string name="action_fav_trips_sort_recent">Last used</string>
    <string name="action_fav_trips_sort_most">Most used</string>
    <string name="action_set_locations">Edit search</string>
    <string name="action_swap_locations">Search return trip</string>
</resources>