<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_show_on_map"
        android:icon="@drawable/ic_action_location_map"
        app:showAsAction="always"
        android:title="@string/action_show_on_map"/>

    <item
        android:id="@+id/action_show_on_external_map"
        android:icon="@drawable/ic_action_external_map"
        app:showAsAction="always"
        android:title="@string/action_show_on_external_map"/>

    <item
        android:id="@+id/action_show_departures"
        android:icon="@drawable/ic_action_departures"
        app:showAsAction="always"
        android:title="@string/find_departures"/>

    <item
        android:id="@+id/action_show_nearby_stations"
        android:icon="@drawable/ic_tab_stations"
        app:showAsAction="always"
        android:title="@string/find_nearby_stations"/>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_social_share"
        app:showAsAction="always"
        android:title="@string/action_share"/>

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_action_content_content_copy"
        app:showAsAction="always"
        android:title="@string/action_copy"/>

</menu>