<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_show_on_map"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:showAsAction="always"
        android:title="@string/action_show_on_map"/>

    <item
        android:id="@+id/action_show_on_external_map"
        android:icon="@drawable/ic_action_external_map"
        android:showAsAction="always"
        android:title="@string/action_show_on_external_map"/>

    <item
        android:id="@+id/action_show_departures"
        android:icon="@drawable/ic_action_departures"
        android:showAsAction="always"
        android:title="@string/find_departures"/>

    <item
        android:id="@+id/action_show_nearby_stations"
        android:icon="@drawable/ic_tab_stations"
        android:showAsAction="always"
        android:title="@string/find_nearby_stations"/>

    <item
        android:id="@+id/action_leg_share"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="always"
        android:title="@string/action_trip_share"/>

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_action_content_content_copy"
        android:showAsAction="always"
        android:title="@string/action_copy"/>

</menu>