<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:de.grobox.liberario="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_recent_trips_sort"
        android:icon="@drawable/ic_action_content_sort"
        de.grobox.liberario:showAsAction="always"
        android:title="@string/action_fav_trips_sort">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_recent_trips_sort_recent"
                    android:title="@string/action_fav_trips_sort_recent"/>
                <item
                    android:id="@+id/action_recent_trips_sort_count"
                    android:title="@string/action_fav_trips_sort_most"/>
            </group>
        </menu>

    </item>
</menu>