<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/mapView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_action_location_map"
        tools:src="@drawable/ic_action_location_map"
        android:background="?attr/actionBarItemBackground"
        android:padding="8dp"
        android:contentDescription="@string/action_show_on_map"/>

    <ImageView
        android:id="@+id/shareView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_action_social_share"
        tools:src="@drawable/ic_action_social_share"
        android:background="?attr/actionBarItemBackground"
        android:padding="8dp"
        android:contentDescription="@string/action_share"/>

    <ImageView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_action_calendar"
        tools:src="@drawable/ic_action_calendar"
        android:background="?attr/actionBarItemBackground"
        android:padding="8dp"
        android:contentDescription="@string/action_trip_calendar"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:id="@+id/expandView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_action_navigation_unfold_more"
        tools:src="@drawable/ic_action_navigation_unfold_more"
        android:background="?attr/actionBarItemBackground"
        android:padding="8dp"
        android:contentDescription="@string/action_navigation_expand"/>

</LinearLayout>