<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bonuspack_bubble"
    android:theme="@style/AppTheme.Light">

    <TextView
        android:id="@+id/bubble_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:textColor="#000000"
        tools:text="Station Name" />

    <LinearLayout
        android:id="@+id/productsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/bubble_title">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_product_bus"/>
    </LinearLayout>


    <TextView
        android:id="@+id/fromHere"
        android:layout_below="@+id/productsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_menu_directions_proxy"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/from_here"/>

    <TextView
        android:id="@+id/toHere"
        android:layout_below="@+id/fromHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_menu_directions_proxy"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/to_here"/>

    <TextView
        android:id="@+id/departures"
        android:layout_below="@+id/toHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_action_departures_proxy"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/drawer_departures"/>

    <TextView
        android:id="@+id/nearbyStations"
        android:layout_below="@+id/departures"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_tab_stations_proxy"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/drawer_nearby_stations"/>

</RelativeLayout>
