<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/mapInfoWindow"
    android:minWidth="175dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/locationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:textSize="16sp"
        tools:text="Station Name" />

    <LinearLayout
        android:id="@+id/productsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_product_bus"
            tools:src="@drawable/ic_product_bus"/>
    </LinearLayout>


    <TextView
        android:id="@+id/fromHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_menu_directions_proxy"
        android:drawableStart="@drawable/ic_menu_directions_proxy"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/from_here"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/toHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_menu_directions_proxy"
        android:drawableStart="@drawable/ic_menu_directions_proxy"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/to_here"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/departures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:drawableLeft="@drawable/ic_action_departures_proxy"
        android:drawableStart="@drawable/ic_action_departures_proxy"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/drawer_departures"
        android:maxLines="1"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/nearbyStations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_tab_stations_proxy"
        android:drawableStart="@drawable/ic_tab_stations_proxy"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/drawer_nearby_stations"
        android:maxLines="1"
        android:ellipsize="end"/>

</LinearLayout>
